@@ -1,3 +1,9 @@
+2008-08-27  Emilio Meschi <emilio.meschi@cern.ch>
+	
+	* tag V00-14-13
+	* added squid presence checking 
+	* modified parametersetretriever to add http option via squid or not
+
 2008-06-19  Emilio Meschi <emilio.meschi@cern.ch>
 	
 	* tag V00-14-12
